fixed logo not showing in owner pages

--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -9,4 +9,11 @@ button.nav-tab span span {
 
 h6.logo a {
     color: white;
+    margin-left: 240px;
+}
+
+@media screen and (max-width: 600px) {
+    h6.logo a {
+        margin-left: 0;
+    }
 }
